fix font with nav-bar on iphone, add .nojekyll

--- a/src/styles/nav_botton.css
+++ b/src/styles/nav_botton.css
@@ -8,7 +8,7 @@
 .navbar {
 padding: 0rem 0;/* 1rem for top/bottom, 0 for left/right */
 padding: 0rem 0 1rem 0; /* top right bottom left */
-font-family: serif, 'YsabeauOffice';
+font-family: serif, Palatino, Georgia,'YsabeauOffice';
 }
 
 /* 响应式设计 - 小屏幕 */
